--- a/index.html
+++ b/index.html
@@ -51,52 +51,68 @@
                         <h2>Upcoming Events</h2>
                         <ol class="fancy-event-list">
                             <li>
-                                <span class="event-number">Event 1:</span>
-                                <span class="event-date">N/A</span>
-                                <span class="event-title">2 Hour Event</span>
-                                <span class="event-location">N/A</span>
+                                <a href="event1.html" class="event-button">
+                                    <span class="event-number">Event 1:</span>
+                                    <span class="event-date">N/A</span>
+                                    <span class="event-title">2 Hour Event</span>
+                                    <span class="event-location">N/A</span>
+                                </a>
                             </li>
                             <li>
-                                <span class="event-number">Event 2:</span>
-                                <span class="event-date">N/A</span>
-                                <span class="event-title">2 Hour Event</span>
-                                <span class="event-location">N/A</span>
+                                <a href="event2.html" class="event-button">
+                                    <span class="event-number">Event 2:</span>
+                                    <span class="event-date">N/A</span>
+                                    <span class="event-title">2 Hour Event</span>
+                                    <span class="event-location">N/A</span>
+                                </a>
                             </li>
                             <li>
-                                <span class="event-number">Event 3:</span>
-                                <span class="event-date">N/A</span>
-                                <span class="event-title">2 Hour Event</span>
-                                <span class="event-location">N/A</span>
+                                <a href="event3.html" class="event-button">
+                                    <span class="event-number">Event 3:</span>
+                                    <span class="event-date">N/A</span>
+                                    <span class="event-title">2 Hour Event</span>
+                                    <span class="event-location">N/A</span>
+                                </a>
                             </li>
                             <li>
-                                <span class="event-number">Event 4:</span>
-                                <span class="event-date">N/A</span>
-                                <span class="event-title">2 Hour Event</span>
-                                <span class="event-location">N/A</span>
+                                <a href="event4.html" class="event-button">
+                                    <span class="event-number">Event 4:</span>
+                                    <span class="event-date">N/A</span>
+                                    <span class="event-title">2 Hour Event</span>
+                                    <span class="event-location">N/A</span>
+                                </a>
                             </li>
                             <li>
-                                <span class="event-number">Event 5:</span>
-                                <span class="event-date">N/A</span>
-                                <span class="event-title">2 Hour Event</span>
-                                <span class="event-location">N/A</span>
+                                <a href="event5.html" class="event-button">
+                                    <span class="event-number">Event 5:</span>
+                                    <span class="event-date">N/A</span>
+                                    <span class="event-title">2 Hour Event</span>
+                                    <span class="event-location">N/A</span>
+                                </a>
                             </li>
                             <li>
-                                <span class="event-number">Event 6:</span>
-                                <span class="event-date">N/A</span>
-                                <span class="event-title">2 Hour Event</span>
-                                <span class="event-location">N/A</span>
+                                <a href="event6.html" class="event-button">
+                                    <span class="event-number">Event 6:</span>
+                                    <span class="event-date">N/A</span>
+                                    <span class="event-title">2 Hour Event</span>
+                                    <span class="event-location">N/A</span>
+                                </a>
                             </li>
                             <li>
-                                <span class="event-number">Event 7:</span>
-                                <span class="event-date">N/A</span>
-                                <span class="event-title">2 Hour Event</span>
-                                <span class="event-location">N/A</span>
+                                <a href="event7.html" class="event-button">
+                                    <span class="event-number">Event 7:</span>
+                                    <span class="event-date">N/A</span>
+                                    <span class="event-title">2 Hour Event</span>
+                                    <span class="event-location">N/A</span>
+                                </a>
                             </li>
                             <li>
-                                <span class="event-number">Event 8:</span>
-                                <span class="event-date">N/A</span>
-                                <span class="event-title">2 Hour Event</span>
-                                <span class="event-location">N/A</span>
+                                <a href="event8.html" class="event-button">
+                                    <span class="event-number">Event 8:</span>
+                                    <span class="event-date">N/A</span>
+                                    <span class="event-title">2 Hour Event</span>
+                                    <span class="event-location">N/A</span>
+                                </a>
                             </li>
                         </ol>
                     </section>
