--- a/event1.html
+++ b/event1.html
@@ -5,26 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Details - Community Cleanup</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Ensuring the map container is flexible */
+        .map-container {
+            width: 100%; /* Make sure it uses the full width of its parent */
+            height: 450px; /* Keep the height consistent */
+        }
+        .map-container iframe {
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            border: 0; /* No border */
+        }
+    </style>
 </head>
 <body>
 
     <section class="event-details-section">
         <a href="index.html" class="home-button">Home</a>
         <h1>Community Cleanup</h1>
-        <p><strong>Date:</strong> October 1, 2024</p>
-        <p><strong>Time:</strong> 9:00 AM - 12:00 PM</p>
-        <p><strong>Location:</strong> Central Park</p>
-        <p><strong>Description:</strong> Join us for a community cleanup event at Central Park. Help us keep our parks clean and beautiful!</p>
-
+        <p><strong>Date:</strong> November 13, 2024</p>
+        <p><strong>Time:</strong> 4:30 PM - 6:30 PM</p>
+        <p><strong>Location:</strong> Leflar Park - 35 Elwin Rd, Brampton, ON</p>
+        <p><strong>Description:</strong> Join us for a community cleanup event in Brampton. Help us keep our community clean and beautiful and gain volunteering experience in the meantime!</p>
+        <p><strong>Sign Up Here:</strong><a href="https://forms.gle/97onEX3kTUCeX3S49"> Redirect to Google Forms</a> </p>
         <h2>Location Map</h2>
         <!-- Google Maps Embed with Event Location -->
         <div class="map-container">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.964223708988!2d-73.9682851846878!3d40.78509117932427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2589f5c3320d5%3A0x3495a2d52c5e4a33!2sCentral%20Park!5e0!3m2!1sen!2sus!4v1617931335936!5m2!1sen!2sus"
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1443.025584434934!2d-79.816470646726!3d43.66790562591791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b1490f701750d%3A0x87d0a56084726f00!2sLeflar%20Park!5e0!3m2!1sen!2sca!4v1730676943232!5m2!1sen!2sca" 
+                    width="600" 
+                    height="450" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
     </section>
 
 </body>
 </html>
+
