--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <li>
                                 <a href="event1.html" class="event-button">
                                     <span class="event-number">Event 1:</span>
-                                    <span class="event-date">N/A</span>
+                                    <span class="event-date">Leflar Park</span>
                                     <span class="event-title">2 Hour Event</span>
                                     <span class="event-location">4:30PM</span>
                                 </a>
