--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                     <h3> About Us</h3>
                     <br>
                     <p>Our mission is to preserve the communities of Brampton through community clean ups and building a cooperative community. Participation in our events remain open to all age groups and all that are willing to join. We aim to recruit 100 regular participants by the end of 2025. With valuable volunteering experience along with community experience, inclusivity, integrity and hard work, Brampton can be transformed into a better place.</p>
+                    <br>
+                    <h3>We are Currently Inactive During the Winter!</h3>
+                    <br>
+                    <p>Our services will be back up when the weather becomes more bearable around March.</p>
+                    <br>
+                    <h3>Sorry! :(</h3>
                 </div>
                 <div class="about-image">
                     <img src="Images and Audios/pexels-shvetsa-5029810.jpg" style="float: right; height: 400px; border-radius: 5%;" alt="About Us">
@@ -51,11 +57,11 @@
                         <h2>Upcoming Events</h2>
                         <ol class="fancy-event-list">
                             <li>
-                                <a href="event1.html" class="event-button">
+                                <a href="event1.html" class="unready-button">
                                     <span class="event-number">Event 1:</span>
-                                    <span class="event-date">Leflar Park</span>
+                                    <span class="event-date">N/A</span>
                                     <span class="event-title">2 Hour Event</span>
-                                    <span class="event-location">4:30PM</span>
+                                    <span class="event-location">N/A</span>
                                 </a>
                             </li>
                             <li>
@@ -130,6 +136,7 @@
                     <p>bramptonpurecare@gmail.com</p>
                 </div>
             </div>
+            <h3>I'm new to HTML, CSS, JS and Web Development if you have any recommendations for the site feel free to E-Mail them to me!</h3>
         </section>
         <script>
             document.querySelectorAll('.unready-button').forEach(button => {
@@ -142,3 +149,4 @@
     </main>
 </body>
 </html>
+
