Reactivating website from winter downtime

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <nav>
         <a href="#about">About Us</a>
         <a href="#events">Events</a>
+        <a href="#safety">Safety</a>
         <a href="#contact">Contact</a>
     </nav>
 
@@ -29,13 +30,11 @@
                 <div class="about-text">
                     <h3> About Us</h3>
                     <br>
-                    <p>Our mission is to preserve the communities of Brampton through community clean ups and building a cooperative community. Participation in our events remain open to all age groups and all that are willing to join. We aim to recruit 100 regular participants by the end of 2025. With valuable volunteering experience along with community experience, inclusivity, integrity and hard work, Brampton can be transformed into a better place.</p>
+                    <p>Brampton Pure Care is a NFP organization and our mission is to enhance Brampton’s communities through cleanups and by fostering cooperation. Our events are open to all ages and anyone eager to participate. We aim to recruit 100 regular volunteers by the end of 2025. Through meaningful volunteer work, inclusivity, integrity, and dedication, we strive to make Brampton a better place for everyone.</p>
                     <br>
-                    <h3>We are Currently Inactive During the Winter!</h3>
+                    <h3>Our services are finally back up and active as of March 17th 2025
+                    </h3>
                     <br>
-                    <p>Our services will be back up when the weather becomes more bearable around March.</p>
-                    <br>
-                    <h3>Sorry! :(</h3>
                 </div>
                 <div class="about-image">
                     <img src="Images and Audios/pexels-shvetsa-5029810.jpg" style="float: right; height: 400px; border-radius: 5%;" alt="About Us">
@@ -57,7 +56,7 @@
                         <h2>Upcoming Events</h2>
                         <ol class="fancy-event-list">
                             <li>
-                                <a href="event1.html" class="unready-button">
+                                <a href="event1.html" class="event-button">
                                     <span class="event-number">Event 1:</span>
                                     <span class="event-date">N/A</span>
                                     <span class="event-title">2 Hour Event</span>
@@ -125,7 +124,20 @@
                 </div>
             </div>
         </section>
-
+        <!-- Safety Section -->
+        <section id="safety">
+            <h2>Safety</h2>
+            <h3>Protective Equipment</h3>
+            <br>
+            <p>When participating in a community clean up, you are required to wear any kind of protective gloves.</p>
+            <br>
+            <h3>Harmful Substances</h3>
+            <br>
+            <p>When participating in our community clean ups, you are required to take safety precautions by avoiding contact with certain substances you may encounter</p>
+            <br>
+            <a href="https://www.ontario.ca/document/guide-designated-substances-workplace/overview-regulation#summarychart"><h3>A List of These Substances can be found here</h3></a>
+            <br>
+        </section>
         <!-- Contact Section -->
         <section id="contact">
             <h2>Contacts</h2>
@@ -149,4 +161,3 @@
     </main>
 </body>
 </html>
-
