--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <span class="event-number">Event 1:</span>
                                     <span class="event-date">N/A</span>
                                     <span class="event-title">2 Hour Event</span>
-                                    <span class="event-location">N/A</span>
+                                    <span class="event-location">Leflar Park</span>
                                 </a>
                             </li>
                             <li>
