--- a/event1.html
+++ b/event1.html
@@ -23,7 +23,7 @@
     <section class="event-details-section">
         <a href="index.html" class="home-button">Home</a>
         <h1>Community Cleanup</h1>
-        <p><strong>Date:</strong> November 13, 2024</p>
+        <p><strong>Date:</strong> Soon to Be Decided</p>
         <p><strong>Time:</strong> 4:30 PM - 6:30 PM</p>
         <p><strong>Location:</strong> Leflar Park - 35 Elwin Rd, Brampton, ON</p>
         <p><strong>Description:</strong> Join us for a community cleanup event in Brampton. Help us keep our community clean and beautiful and gain volunteering experience in the meantime!</p>
