--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <div class="about-text">
                     <h3> About Us</h3>
                     <br>
-                    <p>Brampton Pure Care is a NFP organization and our mission is to enhance Brampton’s communities through cleanups and by fostering cooperation. Our events are open to all ages and anyone eager to participate. We aim to recruit 100 regular volunteers by the end of 2025. Through meaningful volunteer work, inclusivity, integrity, and dedication, we strive to make Brampton a better place for everyone.</p>
+                    <p>Brampton Pure Care is a NFP organization and our mission is to enhance Brampton’s communities through cleanups and by fostering cooperation. Through meaningful volunteer work, inclusivity, integrity, and dedication, we strive to make Brampton a better place for everyone. We will provide gloves to our volunteers as well as snacks and refreshments! </p>
                     <br>
-                    <h3>Our services are finally back up and active as of March 17th 2025
-                    </h3>
+                    <h3> Event Walkthrough</h3>
                     <br>
+                    <p>Our event managing team will put organize biweekly community clean ups at a decided location. Details will be posted in advanced below on the event board as well as on our social medias. Volunteers will gather up with the team at a given location where gloves and garbage bags will be provided. Items that should not be picked up will be mentioned and after formailties and pictures, volunteers can go their own ways in groups. After the two hours, volunteers will gather back up to the decided spot and the garbage collected will be gathered and disposed of accordingly. Lastly, the refreshments and snacks will be given out to all the volunteers.</p>
                 </div>
                 <div class="about-image">
                     <img src="Images and Audios/pexels-shvetsa-5029810.jpg" style="float: right; height: 400px; border-radius: 5%;" alt="About Us">
@@ -58,8 +58,8 @@
                             <li>
                                 <a href="event1.html" class="event-button">
                                     <span class="event-number">Event 1:</span>
-                                    <span class="event-date">N/A</span>
-                                    <span class="event-title">2 Hour Event</span>
+                                    <span class="event-date"> <h4>July 19th 2025</h4></span>
+                                    <span class="event-title">4:30PM - 6:30PM</span>
                                     <span class="event-location">Leflar Park</span>
                                 </a>
                             </li>
@@ -129,7 +129,7 @@
             <h2>Safety</h2>
             <h3>Protective Equipment</h3>
             <br>
-            <p>When participating in a community clean up, you are required to wear any kind of protective gloves.</p>
+            <p>When participating in a community clean up, you are required to wear the protective gloves that will be provided.</p>
             <br>
             <h3>Harmful Substances</h3>
             <br>
@@ -141,11 +141,15 @@
         <!-- Contact Section -->
         <section id="contact">
             <h2>Contacts</h2>
-            <p>Any questions, recommendations or would like to reach out to our team?</p>
+            <p>Would you like to reach out to our team?</p>
             <div class="contact-container">
                 <div class="contact-text">
-                    <h3>G-Mail</h3>
+                    <h3>Email</h3>
                     <p>bramptonpurecare@gmail.com</p>
+                    <h3>CEO & Founder</h3>
+                    <p>(647)-462-5059</p>
+                    <h3>Instagram</h3>
+                    <p><a href="https://www.instagram.com/bramptonpurecare2025/"> Instagram</a></p>
                 </div>
             </div>
             <h3>I'm new to HTML, CSS, JS and Web Development if you have any recommendations for the site feel free to E-Mail them to me!</h3>
